--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,199 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  height: 100%;
+  width: 100%;
+  background-color: #ECEFF1;
+  opacity: .5;
+  /* position: relative; */
+  z-index:1 ;
+}
+
+/* navigation bar styling */
+
+.link-containers {
+  background: #607D8B;
+  border-bottom: 6px solid black;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+.navigation-list {
+  float: right;
+}
+.navigation-list li a {
+  color: white;
+  display: inline-block;
+  text-decoration: none;
+  padding: 2px;
+}
+
+.navigation-list li a:hover {
+  color: white;
+  background-color: #607D8B;
+}
+
+.navigation-list li {
+  display: inline-block;
+  padding: 10px;
+  margin: 0px;
+  color: white;
+  float: left;
+  left: auto;
+}
+
+.clearfix {
+  clear: both;
+}
+
+.active {
+  font-weight: bold;
+  float: right;
+
+}
+
+
+/* content styling */
+
+
+.welcome-container {
+  text-align: center;
+  margin: 10em 15em 10em 15em;
+  background: #CFD8DC;
+  padding: 4em;
+  border-radius: 5px;
+  color: black;
+  opacity: 1;
+  /* width: 98%; */
+}
+
+/* form styling */
+
+.form-container {
+  margin: 5em 32em 5em 32em;
+}
+
+.submit-button {
+  margin-top: 1.5em;
+}
+.list {
+  width: 68%;
+  margin-left: 10px;
+
+}
+.buck-form-container {
+ margin-left: 5em;
+ width: 28%;
+ position: fixed;
+ left: 0;
+ overflow: auto;
+}
+
+.create-bucket-form {
+  width: inherit;
+}
+
+.header-title {
+  margin-left: 2em;
+}
+
+.list-container {
+  width: 70%;
+  padding: 0% 18% 0% 2%;
+  position: absolute;
+  right: 0;
+}
+
+.empty-container {
+  width: 70%;
+  padding: 10% 18% 0% 2%;
+  position: absolute;
+  right: 0;
+  text-align: center;
+}
+
+
+.bucket-input {
+  width: 300px;
+}
+
+.dash-container {
+  display: inline-flex;
+  padding:0 2%;
+  width: 100%;
+  margin-top: 4%;
+}
+
+.footer {
+  bottom: 0;
+  background-color:#263238;
+  color: white;
+  position: fixed;
+  padding: 1.3%;
+  width: 100%;
+  
+}
+
+/* list */
+
+.list-item {
+  border: .5px solid black;
+  padding: 1em 1.5em .8em 1em;
+  width: 100%;
+  border-radius: 6px;
+  margin-bottom: 0.5%;
+
+}
+
+/* button styling */
+
+.form-button {
+  display: inline-flex;
+  float: right;
+  margin-left: .5em;
+}
+
+.edit-button {
+  text-decoration: none;
+}
+
+#sub-one {
+  width: 83.5%;
+}
+
+/* item-styling */
+
+.item-container {
+  padding: .8em 0em;
+  border-bottom: 2px solid black;
+  width: 100%;
+  clear: both;
+}
+
+.add-btn {
+  float: right;
+}
+
+.item-header {
+  display: inline-block;
+  width: 100%;
+}
+
+.item-view {
+  width: 100%;
+}
+
+.items-top-header {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.item-buttons-container {
+  float: right;
+}
+
+.item-button {
+  margin: .8em;
 }
