--- a/src/index.css
+++ b/src/index.css
@@ -290,9 +290,9 @@ body {
 }
 
 .item-size {
-    border-radius: 30px;
-    padding: px;
+    border-radius: 25px;
+    padding: 4px;
     background-color: black;
     color: white;
-    opacity: .6;
+    opacity: .5;
 }
